--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "VCPlayBot",
-  "logo": "https://te.legra.ph/file/68e2e67944bbd0d0d0c78.jpg",
+  "name": " VC MUSIC BOT ",
+  "logo": "",
   "description": "Open-Source bot to play songs in your Telegram's Group Voice Chat. Powered by PyTgCalls.",
   "keywords": ["music", "voicechat", "telegram"],
   "repository": "https://github.com/sakshi444a/VCPlayBot",
